# idk_core

./: CMakeLists.txt  README.md
h/idk/: AppEntry.hpp  AppPlatformAdapter.hpp  AppRuntime.hpp  OsAdapter.hpp
h/idk/core/: Allocator.hpp  BumpAllocator.hpp  Engine.hpp  Event.hpp  EventBus.hpp  IdkPkg.hpp  InplaceList.hpp  Memory.hpp  New.hpp  Service.hpp  Timer.hpp  Tuple.hpp  archive.hpp  assert.hpp  camera.hpp  cfgparser.hpp  controller.hpp  double_buffer.hpp  engine.hpp  file.hpp  game.hpp  inplace.hpp  log.hpp  math.hpp  memory.hpp  metric.hpp  nbufferedvector.hpp  periodic_timer.hpp  platform.hpp  port.hpp  queue.hpp  raii.hpp  random.hpp  renderer.hpp  service.hpp  sharedmemory.hpp  stdlib.hpp  stdmath.hpp  stdstr.hpp  threadpool.hpp  (+5 more)
h/idk/core/detail/: AllocatorImpl.hpp
h/idk/core/lz77/: lz77.hpp
h/idk/core/message/: LocalPort.hpp  LocalTxer.hpp  MessageEndpoint.hpp  port.hpp
h/idk/core/vm/: assembler.cpp  test.asm  vm.cpp  vm.hpp
h/idk/message/: Event.hpp  EventChannel.hpp  LocalPort.hpp  MessageRxTx.hpp
h/idk_core/: Allocator.hpp  Engine.hpp  IdkPkg.hpp  InplaceList.hpp  Memory.hpp  MessageRxer.hpp  MessageTxer.hpp  New.hpp  Platform.hpp  Service.hpp  Timer.hpp  assert.hpp  basis.hpp  camera.hpp  cfgparser.hpp  double_buffer.hpp  file.hpp  inplace.hpp  log.hpp  metric.hpp  queue.hpp  raii.hpp  sharedmemory.hpp  stdlib.hpp  stdmem.hpp  threadpool.hpp  transform.hpp  window.hpp
h/idk_core/lz77/: lz77.hpp  lz77.inl
h/idk_core/vm/: vvm.cpp
src/: Service.cpp  assert.cpp  camera.cpp  cfgparser.cpp  engine.cpp  file.cpp  log.cpp  main.cpp  memory.cpp  port.cpp  service.cpp  threadpool.cpp  transform.cpp
src/detail/: AllocatorImpl.cpp
